- vertx, logging with color, vuejs uses ts